--- a/application/src/components/NavBar.css
+++ b/application/src/components/NavBar.css
@@ -3,7 +3,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
-    background-color: #13293d;
+    background-color: #194264;
     color: #e8f1f2;
 }
 
