--- a/application/src/routes/Home.css
+++ b/application/src/routes/Home.css
@@ -2,7 +2,7 @@
     padding: 2rem;
 }
 
-h1 {
+.loading, h1 {
     color: #ffffff;
     margin-bottom: 2rem;
     text-align: center;
@@ -22,6 +22,7 @@ h1 {
     color: #333;
     border-radius: 10px;
     width: 300px;
+    height: 100%;
 }
 
 .goal img {
